crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__PLC0105_type_name_incorrect_variance.py.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
PLC0105 `TypeVar` name "T" does not reflect its covariance; consider renaming it to "T_co"
 --> type_name_incorrect_variance.py:5:5
  |
5 | T = TypeVar("T", covariant=True)
  |     ^^^^^^^
  |

PLC0105 `TypeVar` name "T" does not reflect its covariance; consider renaming it to "T_co"
 --> type_name_incorrect_variance.py:6:5
  |
6 | T = TypeVar("T", covariant=True, contravariant=False)
  |     ^^^^^^^
  |

PLC0105 `TypeVar` name "T" does not reflect its contravariance; consider renaming it to "T_contra"
 --> type_name_incorrect_variance.py:7:5
  |
7 | T = TypeVar("T", contravariant=True)
  |     ^^^^^^^
  |

PLC0105 `TypeVar` name "T" does not reflect its contravariance; consider renaming it to "T_contra"
 --> type_name_incorrect_variance.py:8:5
  |
8 | T = TypeVar("T", covariant=False, contravariant=True)
  |     ^^^^^^^
  |

PLC0105 `ParamSpec` name "P" does not reflect its covariance; consider renaming it to "P_co"
 --> type_name_incorrect_variance.py:9:5
  |
9 | P = ParamSpec("P", covariant=True)
  |     ^^^^^^^^^
  |

PLC0105 `ParamSpec` name "P" does not reflect its covariance; consider renaming it to "P_co"
  --> type_name_incorrect_variance.py:10:5
   |
10 | P = ParamSpec("P", covariant=True, contravariant=False)
   |     ^^^^^^^^^
   |

PLC0105 `ParamSpec` name "P" does not reflect its contravariance; consider renaming it to "P_contra"
  --> type_name_incorrect_variance.py:11:5
   |
11 | P = ParamSpec("P", contravariant=True)
   |     ^^^^^^^^^
   |

PLC0105 `ParamSpec` name "P" does not reflect its contravariance; consider renaming it to "P_contra"
  --> type_name_incorrect_variance.py:12:5
   |
12 | P = ParamSpec("P", covariant=False, contravariant=True)
   |     ^^^^^^^^^
   |

PLC0105 `TypeVar` name "T_co" does not reflect its invariance; consider renaming it to "T"
  --> type_name_incorrect_variance.py:14:8
   |
14 | T_co = TypeVar("T_co")
   |        ^^^^^^^
   |

PLC0105 `TypeVar` name "T_co" does not reflect its invariance; consider renaming it to "T"
  --> type_name_incorrect_variance.py:15:8
   |
15 | T_co = TypeVar("T_co", covariant=False)
   |        ^^^^^^^
   |

PLC0105 `TypeVar` name "T_co" does not reflect its invariance; consider renaming it to "T"
  --> type_name_incorrect_variance.py:16:8
   |
16 | T_co = TypeVar("T_co", contravariant=False)
   |        ^^^^^^^
   |

PLC0105 `TypeVar` name "T_co" does not reflect its invariance; consider renaming it to "T"
  --> type_name_incorrect_variance.py:17:8
   |
17 | T_co = TypeVar("T_co", covariant=False, contravariant=False)
   |        ^^^^^^^
   |

PLC0105 `TypeVar` name "T_co" does not reflect its contravariance; consider renaming it to "T_contra"
  --> type_name_incorrect_variance.py:18:8
   |
18 | T_co = TypeVar("T_co", contravariant=True)
   |        ^^^^^^^
   |

PLC0105 `TypeVar` name "T_co" does not reflect its contravariance; consider renaming it to "T_contra"
  --> type_name_incorrect_variance.py:19:8
   |
19 | T_co = TypeVar("T_co", covariant=False, contravariant=True)
   |        ^^^^^^^
   |

PLC0105 `ParamSpec` name "P_co" does not reflect its invariance; consider renaming it to "P"
  --> type_name_incorrect_variance.py:20:8
   |
20 | P_co = ParamSpec("P_co")
   |        ^^^^^^^^^
   |

PLC0105 `ParamSpec` name "P_co" does not reflect its invariance; consider renaming it to "P"
  --> type_name_incorrect_variance.py:21:8
   |
21 | P_co = ParamSpec("P_co", covariant=False)
   |        ^^^^^^^^^
   |

PLC0105 `ParamSpec` name "P_co" does not reflect its invariance; consider renaming it to "P"
  --> type_name_incorrect_variance.py:22:8
   |
22 | P_co = ParamSpec("P_co", contravariant=False)
   |        ^^^^^^^^^
   |

PLC0105 `ParamSpec` name "P_co" does not reflect its invariance; consider renaming it to "P"
  --> type_name_incorrect_variance.py:23:8
   |
23 | P_co = ParamSpec("P_co", covariant=False, contravariant=False)
   |        ^^^^^^^^^
   |

PLC0105 `ParamSpec` name "P_co" does not reflect its contravariance; consider renaming it to "P_contra"
  --> type_name_incorrect_variance.py:24:8
   |
24 | P_co = ParamSpec("P_co", contravariant=True)
   |        ^^^^^^^^^
   |

PLC0105 `ParamSpec` name "P_co" does not reflect its contravariance; consider renaming it to "P_contra"
  --> type_name_incorrect_variance.py:25:8
   |
25 | P_co = ParamSpec("P_co", covariant=False, contravariant=True)
   |        ^^^^^^^^^
   |

PLC0105 `TypeVar` name "T_contra" does not reflect its invariance; consider renaming it to "T"
  --> type_name_incorrect_variance.py:27:12
   |
27 | T_contra = TypeVar("T_contra")
   |            ^^^^^^^
   |

PLC0105 `TypeVar` name "T_contra" does not reflect its invariance; consider renaming it to "T"
  --> type_name_incorrect_variance.py:28:12
   |
28 | T_contra = TypeVar("T_contra", covariant=False)
   |            ^^^^^^^
   |

PLC0105 `TypeVar` name "T_contra" does not reflect its invariance; consider renaming it to "T"
  --> type_name_incorrect_variance.py:29:12
   |
29 | T_contra = TypeVar("T_contra", contravariant=False)
   |            ^^^^^^^
   |

PLC0105 `TypeVar` name "T_contra" does not reflect its invariance; consider renaming it to "T"
  --> type_name_incorrect_variance.py:30:12
   |
30 | T_contra = TypeVar("T_contra", covariant=False, contravariant=False)
   |            ^^^^^^^
   |

PLC0105 `TypeVar` name "T_contra" does not reflect its covariance; consider renaming it to "T_co"
  --> type_name_incorrect_variance.py:31:12
   |
31 | T_contra = TypeVar("T_contra", covariant=True)
   |            ^^^^^^^
   |

PLC0105 `TypeVar` name "T_contra" does not reflect its covariance; consider renaming it to "T_co"
  --> type_name_incorrect_variance.py:32:12
   |
32 | T_contra = TypeVar("T_contra", covariant=True, contravariant=False)
   |            ^^^^^^^
   |

PLC0105 `ParamSpec` name "P_contra" does not reflect its invariance; consider renaming it to "P"
  --> type_name_incorrect_variance.py:33:12
   |
33 | P_contra = ParamSpec("P_contra")
   |            ^^^^^^^^^
   |

PLC0105 `ParamSpec` name "P_contra" does not reflect its invariance; consider renaming it to "P"
  --> type_name_incorrect_variance.py:34:12
   |
34 | P_contra = ParamSpec("P_contra", covariant=False)
   |            ^^^^^^^^^
   |

PLC0105 `ParamSpec` name "P_contra" does not reflect its invariance; consider renaming it to "P"
  --> type_name_incorrect_variance.py:35:12
   |
35 | P_contra = ParamSpec("P_contra", contravariant=False)
   |            ^^^^^^^^^
   |

PLC0105 `ParamSpec` name "P_contra" does not reflect its invariance; consider renaming it to "P"
  --> type_name_incorrect_variance.py:36:12
   |
36 | P_contra = ParamSpec("P_contra", covariant=False, contravariant=False)
   |            ^^^^^^^^^
   |

PLC0105 `ParamSpec` name "P_contra" does not reflect its covariance; consider renaming it to "P_co"
  --> type_name_incorrect_variance.py:37:12
   |
37 | P_contra = ParamSpec("P_contra", covariant=True)
   |            ^^^^^^^^^
   |

PLC0105 `ParamSpec` name "P_contra" does not reflect its covariance; consider renaming it to "P_co"
  --> type_name_incorrect_variance.py:38:12
   |
38 | P_contra = ParamSpec("P_contra", covariant=True, contravariant=False)
   |            ^^^^^^^^^
   |
