crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__PLC0131_type_bivariance.py.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
PLC0131 `TypeVar` "T" cannot be both covariant and contravariant
 --> type_bivariance.py:5:5
  |
5 | T = TypeVar("T", covariant=True, contravariant=True)
  |     ^^^^^^^
  |

PLC0131 `TypeVar` "T" cannot be both covariant and contravariant
 --> type_bivariance.py:6:5
  |
6 | T = TypeVar(name="T", covariant=True, contravariant=True)
  |     ^^^^^^^
  |

PLC0131 `ParamSpec` "T" cannot be both covariant and contravariant
 --> type_bivariance.py:8:5
  |
8 | T = ParamSpec("T", covariant=True, contravariant=True)
  |     ^^^^^^^^^
  |

PLC0131 `ParamSpec` "T" cannot be both covariant and contravariant
 --> type_bivariance.py:9:5
  |
9 | T = ParamSpec(name="T", covariant=True, contravariant=True)
  |     ^^^^^^^^^
  |
