crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__PLC0132_type_param_name_mismatch.py.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
PLC0132 `TypeVar` name `T` does not match assigned variable name `X`
 --> type_param_name_mismatch.py:5:5
  |
5 | X = TypeVar("T")
  |     ^^^^^^^^^^^^
  |

PLC0132 `TypeVar` name `T` does not match assigned variable name `X`
 --> type_param_name_mismatch.py:6:5
  |
6 | X = TypeVar(name="T")
  |     ^^^^^^^^^^^^^^^^^
  |

PLC0132 `ParamSpec` name `T` does not match assigned variable name `Y`
 --> type_param_name_mismatch.py:8:5
  |
8 | Y = ParamSpec("T")
  |     ^^^^^^^^^^^^^^
  |

PLC0132 `ParamSpec` name `T` does not match assigned variable name `Y`
 --> type_param_name_mismatch.py:9:5
  |
9 | Y = ParamSpec(name="T")
  |     ^^^^^^^^^^^^^^^^^^^
  |

PLC0132 `NewType` name `T` does not match assigned variable name `Z`
  --> type_param_name_mismatch.py:11:5
   |
11 | Z = NewType("T", int)
   |     ^^^^^^^^^^^^^^^^^
   |

PLC0132 `NewType` name `T` does not match assigned variable name `Z`
  --> type_param_name_mismatch.py:12:5
   |
12 | Z = NewType(name="T", tp=int)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
   |

PLC0132 `TypeVarTuple` name `Ts` does not match assigned variable name `Ws`
  --> type_param_name_mismatch.py:14:6
   |
14 | Ws = TypeVarTuple("Ts")
   |      ^^^^^^^^^^^^^^^^^^
   |

PLC0132 `TypeVarTuple` name `Ts` does not match assigned variable name `Ws`
  --> type_param_name_mismatch.py:15:6
   |
15 | Ws = TypeVarTuple(name="Ts")
   |      ^^^^^^^^^^^^^^^^^^^^^^^
   |
