crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__PLC0205_single_string_slots.py.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
PLC0205 Class `__slots__` should be a non-string iterable
 --> single_string_slots.py:3:5
  |
3 |     __slots__ = "bar"
  |     ^^^^^^^^^^^^^^^^^
  |

PLC0205 Class `__slots__` should be a non-string iterable
  --> single_string_slots.py:10:5
   |
10 |     __slots__: str = "bar"
   |     ^^^^^^^^^^^^^^^^^^^^^^
   |

PLC0205 Class `__slots__` should be a non-string iterable
  --> single_string_slots.py:17:5
   |
17 |     __slots__: str = f"bar"
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   |
