crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__PLC0206_consider_dict_items.py.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
consider_dict_items.py:9:1: PLC0206 Extracting value from dictionary in iteration without calling `.items()`
   |
 8 |   # Errors
 9 | / for instrument in ORCHESTRA:
10 | |     print(f"{instrument}: {ORCHESTRA[instrument]}")
   | |___________________________________________________^ PLC0206
11 |   
12 |   for instrument in ORCHESTRA:
   |

consider_dict_items.py:12:1: PLC0206 Extracting value from dictionary in iteration without calling `.items()`
   |
10 |       print(f"{instrument}: {ORCHESTRA[instrument]}")
11 |   
12 | / for instrument in ORCHESTRA:
13 | |     ORCHESTRA[instrument]
   | |_________________________^ PLC0206
14 |   
15 |   for instrument in ORCHESTRA.keys():
   |

consider_dict_items.py:15:1: PLC0206 Extracting value from dictionary in iteration without calling `.items()`
   |
13 |       ORCHESTRA[instrument]
14 |   
15 | / for instrument in ORCHESTRA.keys():
16 | |     print(f"{instrument}: {ORCHESTRA[instrument]}")
   | |___________________________________________________^ PLC0206
17 |   
18 |   for instrument in ORCHESTRA.keys():
   |

consider_dict_items.py:18:1: PLC0206 Extracting value from dictionary in iteration without calling `.items()`
   |
16 |       print(f"{instrument}: {ORCHESTRA[instrument]}")
17 |   
18 | / for instrument in ORCHESTRA.keys():
19 | |     ORCHESTRA[instrument]
   | |_________________________^ PLC0206
20 |   
21 |   for instrument in (temp_orchestra := {"violin": "strings", "oboe": "woodwind"}):
   |

consider_dict_items.py:21:1: PLC0206 Extracting value from dictionary in iteration without calling `.items()`
   |
19 |       ORCHESTRA[instrument]
20 |   
21 | / for instrument in (temp_orchestra := {"violin": "strings", "oboe": "woodwind"}):
22 | |     print(f"{instrument}: {temp_orchestra[instrument]}")
   | |________________________________________________________^ PLC0206
23 |   
24 |   for instrument in (temp_orchestra := {"violin": "strings", "oboe": "woodwind"}):
   |

consider_dict_items.py:24:1: PLC0206 Extracting value from dictionary in iteration without calling `.items()`
   |
22 |       print(f"{instrument}: {temp_orchestra[instrument]}")
23 |   
24 | / for instrument in (temp_orchestra := {"violin": "strings", "oboe": "woodwind"}):
25 | |     temp_orchestra[instrument]
   | |______________________________^ PLC0206
26 |   
27 |   # # OK
   |
