crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__PLC0302_too_many_lines_2.py_1999.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
too_many_lines_2.py:1:1: PLC0302 Too many lines in module (2000>1999)
  |
1 | def bar():
  |  PLC0302
2 |     pass
  |
