crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__PLC0415_import_outside_top_level.py.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
PLC0415 `import` should be at the top-level of a file
  --> import_outside_top_level.py:10:5
   |
10 |     import symtable  # [import-outside-toplevel]
   |     ^^^^^^^^^^^^^^^
   |

PLC0415 `import` should be at the top-level of a file
  --> import_outside_top_level.py:11:5
   |
11 |     import os, sys  # [import-outside-toplevel]
   |     ^^^^^^^^^^^^^^
   |

PLC0415 `import` should be at the top-level of a file
  --> import_outside_top_level.py:12:5
   |
12 |     import time as thyme  # [import-outside-toplevel]
   |     ^^^^^^^^^^^^^^^^^^^^
   |

PLC0415 `import` should be at the top-level of a file
  --> import_outside_top_level.py:13:5
   |
13 |     import random as rand, socket as sock  # [import-outside-toplevel]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

PLC0415 `import` should be at the top-level of a file
  --> import_outside_top_level.py:14:5
   |
14 |     from collections import defaultdict # [import-outside-toplevel]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

PLC0415 `import` should be at the top-level of a file
  --> import_outside_top_level.py:15:5
   |
15 |     from math import sin as sign, cos as cosplay  # [import-outside-toplevel]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

PLC0415 `import` should be at the top-level of a file
  --> import_outside_top_level.py:19:5
   |
19 |     import tokenize  # [import-outside-toplevel]
   |     ^^^^^^^^^^^^^^^
   |

PLC0415 `import` should be at the top-level of a file
  --> import_outside_top_level.py:22:9
   |
22 |         import trace  # [import-outside-toplevel]
   |         ^^^^^^^^^^^^
   |
